removed some files, added vercel.json and railway.toml

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "node test.js",
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "npx playwright install chromium",
+    "vercel-build": "npm run postinstall"
   },
   "keywords": [],
   "author": "",
