--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "node test.js",
     "dev": "nodemon app.js",
     "start": "node app.js",
-    "postinstall": "npx playwright install chromium",
+    "postinstall": "npx playwright install chromium"
   },
   "keywords": [],
   "author": "",
