--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "node test.js",
     "dev": "nodemon app.js",
-    "start": "node app.js",
-    "postinstall": "npx playwright install chromium"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
