--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "postinstall": "npx playwright install chromium --with-deps",
+    "postinstall": "npx playwright install chromium",
     "test": "node test.js",
     "dev": "nodemon app.js",
     "start": "node app.js"
