--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "playwright": "^1.52.0",
+    "playwright-core": "^1.52.0",
     "puppeteer-core": "^24.9.0"
   },
   "devDependencies": {
