--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "playwright": "^1.52.0",
     "playwright-core": "^1.52.0",
-    "puppeteer-core": "^24.9.0"
+    "puppeteer-core": "^24.9.0",
+    "redis": "^5.5.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
