--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ COOKIES=
 USE_PROXY=true
 # Format: 
 PROXIES=http://proxy1.com:8080,http://user:pass@proxy2.com:8080
+
+# Redis Configuration
+# Format: redis://default:password@host:port
+# Example for Redis Cloud: redis://default:password123@redis-12345.c123.us-east-1-1.ec2.cloud.redislabs.com:12345
+REDIS_URL= 
