--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,8 @@
-railway.toml
-COPY . .
+[build]
+builder = "npm install && npx playwright install"
 
-# Create temp directory for cookies
-RUN mkdir -p /tmp
-
-# Expose port
-EXPOSE 8080
-
-# Start command
-CMD ["npm", "start"]
+[deploy]
+startCommand = "npm start"
+healthcheckPath = "/"
+healthcheckTimeout = 100
+restartPolicyType = "ON_FAILURE"
